# contentizer

./: .env.example  .gitignore  .prompt  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  presets.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  llm.rs  main.rs  presets.rs
src/components/: HistoryList.tsx  PresetSelector.tsx  TextAreas.tsx  TopBar.tsx
src/pages/: History.tsx  Optimize.tsx  Settings.tsx
