[package]
name = "contentizer"
version = "0.1.0"
description = "AI Text Optimizer"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "contentizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
keyring = "2.3.3"

# Optional: secure key storage on macOS (Keychain). Uncomment when adding the plugin.
# tauri-plugin-keychain = "2"
